// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimeControlRenderer.vue should render component and match snapshot 1`] = `
<div data-app="true"
     class="v-application v-application--is-ltr theme--light"
     id="app"
>
  <div class="v-application--wrap">
    <div id="#"
         class="control"
         appliedoptions="[object Object]"
         errors
         label="My Time"
    >
      <div class="v-input v-input--is-label-active v-input--is-dirty theme--light v-text-field v-text-field--placeholder input">
        <div class="v-input__control">
          <div class="v-input__slot">
            <div class="v-input__prepend-inner">
              <button type="button"
                      tabindex="-1"
                      class="v-icon notranslate v-icon--link mdi mdi-clock-outline theme--light"
              >
              </button>
              <div class="v-menu">
              </div>
            </div>
            <div class="v-text-field__slot">
              <label for="#-input"
                     class="v-label v-label--active theme--light"
                     style="left: 0px; position: absolute;"
              >
                My Time
              </label>
              <input id="#-input"
                     type="text"
              >
            </div>
          </div>
          <div class="v-text-field__details">
            <div class="v-messages theme--light">
              <transition-group-stub tag="div"
                                     name="message-transition"
                                     class="v-messages__wrapper"
              >
              </transition-group-stub>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TimeControlRenderer.vue should render component and match snapshot when clicked 1`] = `
<div data-app="true"
     class="v-application v-application--is-ltr theme--light"
     id="app"
>
  <div class="v-application--wrap">
    <div id="#"
         class="control"
         appliedoptions="[object Object]"
         errors
         label="My Time"
         isfocused="true"
    >
      <div class="v-input v-input--is-label-active v-input--is-dirty v-input--is-focused theme--light v-text-field v-text-field--placeholder primary--text input">
        <div class="v-input__control">
          <div class="v-input__slot">
            <div class="v-input__prepend-inner">
              <button type="button"
                      tabindex="-1"
                      class="v-icon notranslate v-icon--link mdi mdi-clock-outline theme--light"
              >
              </button>
              <div class="v-menu">
              </div>
            </div>
            <div class="v-text-field__slot">
              <label for="#-input"
                     class="v-label v-label--active theme--light primary--text"
                     style="left: 0px; position: absolute;"
              >
                My Time
              </label>
              <input id="#-input"
                     type="text"
                     placeholder="time placeholder"
              >
            </div>
          </div>
          <div class="v-text-field__details">
            <div class="v-messages theme--light primary--text">
              <transition-group-stub tag="div"
                                     name="message-transition"
                                     class="v-messages__wrapper"
              >
              </transition-group-stub>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
